--- a/src/app/sidebar.css
+++ b/src/app/sidebar.css
@@ -1,4 +1,4 @@
-.openSideBar{
+/* .openSideBar{
     animation-name: openSideBar;
     animation-duration: 0.5s;
     animation-fill-mode: forwards;
@@ -29,4 +29,4 @@
     100% {
         transform: translateX(0px);
     }
-}
+} */
