--- a/src/app/_components/FeedPage/SwipeRefreshListStyle.css
+++ b/src/app/_components/FeedPage/SwipeRefreshListStyle.css
@@ -22,6 +22,7 @@
     transform: translateX(-50%) translateY(-100%);
     opacity: 0;
     will-change: transform opacity;
+    z-index: 1000;
 }
 
 .sdr-circularArrowStyle {
